# hack-for-social-impact

./: .gitignore  README.md  test.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .env  .env.example  .gcloudignore  .gitignore  ANALYSIS_BREAKDOWN.md  CLOUD_RUN_PLAN.md  DEPLOYMENT.md  Dockerfile  GCP_SETUP.md  IMPORT_ERROR_FIX.md  README.md  SERVICE_URL.md  SETUP_COMPLETE.md  TEST_RESULTS.md  Young-AK2960-2024-10-24_converted.md  analysis_demo.py  api_usage_demo.py  cloudbuild.yaml  create_test_pdf.py  custom_analysis_result.md  extracted_text.txt  gcs_client.py  innocence_analysis_result.md  main.py  parole_summary_result.md  pyproject.toml  quick-setup.sh  setup.sh  start.sh  test_analysis_process.py  test_gemini_models.py  test_pdf_curl.sh  test_pdf_to_markdown.py  test_pdf_web.html  test_upload.py
backend/api/core/: config.py
backend/api/routes/: file.py  health.py  pdf.py
backend/api/services/: gcs_client.py  pdf_service.py
frontend/: .env.production  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/dev/server/app/: page.js  page_client-reference-manifest.js
frontend/src/: App.tsx  PdfUploadModal.tsx  index.css  innocenceClaimData.json  mockData.json
frontend/src/pages/: ApiTestPage.tsx  Dashboard.tsx  ModalTestPage.tsx
frontend/src/services/: api.ts
frontend/src/utils/: pdfExporter.ts
(+9 files in other folders)
