[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "google-generativeai>=0.3.0",
    "google-cloud-storage>=2.10.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0"
]
